small fix that helped significantly for nav bar jump bug, changed padding-top in main of css

--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ nav a {
 /*-----*/
 
 main {
+    padding-top: 10vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 50px;
